--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: python
 python:
     - "2.7"
     - "3.4"
+    - "pypy"
 before_install:
     - pip install pytest pytest-cov
-    - pip install -r requiremets.txt
+install:
+    - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install importlib unittest2; fi
+    - pip install -r requirements.txt
 script:
     - py.test test.py
