--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ python:
     - "2.7"
     - "3.4"
     - "pypy"
-before_install:
-    - pip install pytest pytest-cov
 install:
     - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install importlib unittest2; fi
-    - pip install -r requirements.txt
+    - pip install -r requirements/test.txt
+    - pip install -r requirements/main.txt
 script:
     - py.test test.py
