--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '2'
 services:
     web:
-        command: venv/bin/python main.py
-        working_dir: /code
+        command: ../venv/bin/python main.py
+        working_dir: /code/src
         ports:
             - "5000:5000"
         build:
             context: .
+        volumes:
+            - .:/code/src
